cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_464.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/ectest.c:2057: error: DEAD_STORE
  The value written to &g_next (type ec_group_st**) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/ectest.c:2057:13: Write of unused value
2055.           || !TEST_ptr(other_params = *p_next++ =
2056.                        EC_GROUP_get_ecparameters(tmpg, NULL))
2057.           || !TEST_ptr(tgroup = *g_next++ =
                    ^
2058.                         EC_GROUP_new_from_ecparameters(other_params))
2059.           || !TEST_int_ne((tnid = EC_GROUP_get_curve_name(tgroup)), NID_undef)
